--- a/deno.json
+++ b/deno.json
@@ -2,5 +2,12 @@
   "imports": {
     "applicative_parser/": "https://deno.land/x/applicative_parser@1.0.23/",
     "std/": "https://deno.land/std@0.208.0/"
+  },
+  "fmt": {
+    "useTabs": false,
+    "lineWidth": 80,
+    "indentWidth": 2,
+    "semiColons": false,
+    "singleQuote": true
   }
 }
